--- a/module_3/my/3.4/temp_files/file1.html
+++ b/module_3/my/3.4/temp_files/file1.html
@@ -6,13 +6,12 @@
  </head>
  <body>
   <h1>Заголовок</h1>
-  <a href="http://stepic.org/courses">1</a>
-<a href='https://stepic.org'>1</a>
-<a href='http://neerc.ifmo.ru:1345'>1</a>
-<a href="ftp://mail.ru/distib" >1</a>
-<a href="ya.ru">1</a>
-<a href="www.ya.ru">1</a>
-<a href="../skip_relative_links">1</a>
+  <li><a href="http://redir.rbc.ru/cgi-bin/redirect.cgi?http://hc.ru/ru/">Хостинг</a></li>
+<li><a href="http://www.m-2.ru/">M2</a></li>
+<a target="_top" href="http://banner.rbc.ru/banredir.cgi?lid=firstpage_left" empty="true" style="display:none"></a></div>
+<li><a href="http://www.biztorg.ru/search.shtml?cfg=biztorg&type=S">Предложения о продаже</a></li>
+<li><a href="http://biztorg.ru:80/main_services_new.shtml">Оценка бизнеса</a></li>
+<a href="http://static.feed.rbc.ru/rbc/internal/rss.rbc.ru/rbcdaily.ru/mainnews.rss" class="flRight small" style="margin:0 0 0 5px;">'''
   <p>Первый абзац.</p>
   <p>Второй абзац.</p>
  </body>
